1. Seperate Operator interface from Operand 2. Create DelegateType with Operator factories 3. Remove CurrencyOperand by implementing CurrencyOperator with BigDecimalOperand